output.txt
    Checking cf_window v0.1.0 (/Users/lagos/code/cf_window)
warning: unused imports: `CGEventMask` and `CGEvent`
 --> src/main.rs:5:28
  |
5 | ...::{CGEvent, CGEventTap, CGEventTapLocation, CGEventTapOptions, CGEventTapPlacement, CGEventType, CGEventMask};
  |       ^^^^^^^                                                                                       ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `value` found for struct `CFBoolean` in the current scope
   --> src/accessibility.rs:109:20
    |
109 |         if is_main.value() { return; }
    |                    ^^^^^ method not found in `CFBoolean`

error[E0308]: mismatched types
   --> src/main.rs:52:9
    |
 48 |     let tap = CGEventTap::new(
    |               --------------- arguments to this function are incorrect
...
 52 |         mask,
    |         ^^^^ expected `Vec<CGEventType>`, found integer
    |
    = note: expected struct `Vec<CGEventType>`
                 found type `{integer}`
note: associated function defined here
   --> /Users/lagos/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/core-graphics-0.25.0/src/event.rs:570:12
    |
570 |     pub fn new<F: Fn(CGEventTapProxy, CGEventType, &CGEvent) -> CallbackResult + Send + 'stat...
    |            ^^^

error[E0599]: no function or associated item named `run` found for struct `CFRunLoop` in the current scope
  --> src/main.rs:67:16
   |
67 |     CFRunLoop::run();
   |                ^^^ function or associated item not found in `CFRunLoop`
   |
note: if you're trying to build a new `CFRunLoop` consider using one of the following associated functions:
      CFRunLoop::get_current
      CFRunLoop::get_main
  --> /Users/lagos/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/core-foundation-0.10.1/src/runloop.rs:41:5
   |
41 |     pub fn get_current() -> CFRunLoop {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
48 |     pub fn get_main() -> CFRunLoop {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning[E0133]: call to unsafe function `accessibility::AXUIElementCreateSystemWide` is unsafe and requires unsafe block
  --> src/accessibility.rs:43:20
   |
43 |     let sys_wide = AXUIElementCreateSystemWide();
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
note: an unsafe function restricts its caller, but its body is safe by default
  --> src/accessibility.rs:42:1
   |
42 | pub unsafe fn find_window_at(x: f32, y: f32) -> Option<AXUIElementRef> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>
   = note: `#[warn(unsafe_op_in_unsafe_fn)]` (part of `#[warn(rust_2024_compatibility)]`) on by default

warning[E0133]: call to unsafe function `accessibility::AXUIElementCopyElementAtPosition` is unsafe and requires unsafe block
  --> src/accessibility.rs:46:8
   |
46 |     if AXUIElementCopyElementAtPosition(sys_wide, x, y, &mut element) != K_AX_ERROR_SUCCESS {
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>

warning[E0133]: call to unsafe function `core_foundation::base::CFRelease` is unsafe and requires unsafe block
  --> src/accessibility.rs:47:9
   |
47 |         core_foundation::base::CFRelease(sys_wide as *const _);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>

warning[E0133]: call to unsafe function `accessibility::AXUIElementCopyAttributeValue` is unsafe and requires unsafe block
  --> src/accessibility.rs:61:12
   |
61 | ...if AXUIElementCopyAttributeValue(current, role_attr.as_concrete_TypeRef(), &mut role_ref) ==...
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>

warning[E0133]: call to unsafe function `core_foundation::base::TCFType::wrap_under_create_rule` is unsafe and requires unsafe block
  --> src/accessibility.rs:62:28
   |
62 |             let role_str = CFString::wrap_under_create_rule(role_ref as CFStringRef);
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>

warning[E0133]: call to unsafe function `accessibility::AXUIElementCopyAttributeValue` is unsafe and requires unsafe block
  --> src/accessibility.rs:72:12
   |
72 | ...if AXUIElementCopyAttributeValue(current, parent_attr.as_concrete_TypeRef(), &mut parent_ref) ==...
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>

warning[E0133]: call to unsafe function `core_foundation::base::CFRelease` is unsafe and requires unsafe block
  --> src/accessibility.rs:74:17
   |
74 |                 core_foundation::base::CFRelease(current as *const _);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>

warning[E0133]: call to unsafe function `core_foundation::base::CFRelease` is unsafe and requires unsafe block
  --> src/accessibility.rs:80:17
   |
80 |                 core_foundation::base::CFRelease(current as *const _);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>

warning[E0133]: call to unsafe function `core_foundation::base::CFRelease` is unsafe and requires unsafe block
  --> src/accessibility.rs:87:33
   |
87 |         if !element.is_null() { core_foundation::base::CFRelease(element as *const _); }
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>

warning[E0133]: call to unsafe function `core_foundation::base::CFRelease` is unsafe and requires unsafe block
  --> src/accessibility.rs:88:9
   |
88 |         core_foundation::base::CFRelease(sys_wide as *const _);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>

warning[E0133]: call to unsafe function `core_foundation::base::CFRelease` is unsafe and requires unsafe block
  --> src/accessibility.rs:91:32
   |
91 |         if element != window { core_foundation::base::CFRelease(element as *const _); }
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>

warning[E0133]: call to unsafe function `core_foundation::base::CFRelease` is unsafe and requires unsafe block
  --> src/accessibility.rs:92:9
   |
92 |         core_foundation::base::CFRelease(sys_wide as *const _);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>

Some errors have detailed explanations: E0133, E0308, E0599.
For more information about an error, try `rustc --explain E0133`.
warning: `cf_window` (bin "cf_window") generated 13 warnings
error: could not compile `cf_window` (bin "cf_window") due to 3 previous errors; 13 warnings emitted
